tests/negative/Termination/ToEmpty.juvix
module ToEmpty;
  axiom A : Type;
  inductive Empty {};
  f : A -> Empty;
  f x := f x;
end;
